--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@radix-ui/react-context-menu": "^2.1.3",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
+    "@radix-ui/react-popover": "^1.0.5",
+    "@radix-ui/react-portal": "^1.0.2",
     "@radix-ui/react-scroll-area": "^1.0.3",
     "@radix-ui/react-select": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.0.5",
@@ -42,6 +44,7 @@
     "cuid": "^3.0.0",
     "diff": "^5.1.0",
     "eventsource-parser": "^1.0.0",
+    "fast-deep-equal": "^3.1.3",
     "framer-motion": "^10.10.0",
     "gitdiff-parser": "^0.3.1",
     "jotai": "^2.0.4",
@@ -49,6 +52,7 @@
     "jsdom": "^21.1.1",
     "lexorank": "^1.0.5",
     "lodash": "^4.17.21",
+    "million": "^2.3.0",
     "next": "^13.2.4",
     "next-remove-imports": "^1.0.11",
     "node-html-parser": "^6.1.5",
