--- a/package.json
+++ b/package.json
@@ -95,7 +95,8 @@
     "prettier-plugin-tailwindcss": "^0.2.7",
     "prisma": "^4.13.0",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "webpack-bundle-analyzer": "^4.8.0"
   },
   "ct3aMetadata": {
     "initVersion": "7.10.1"
