--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev",
-    "postinstall": "prisma generate",
     "lint": "next lint",
     "start": "next start"
   },
@@ -20,7 +19,8 @@
     "@mantine/hooks": "^6.0.9",
     "@mozilla/readability": "^0.4.4",
     "@nem035/gpt-3-encoder": "^1.1.7",
-    "@prisma/client": "^4.13.0",
+    "@paralleldrive/cuid2": "^2.2.0",
+    "@planetscale/database": "^1.7.0",
     "@radix-ui/react-accordion": "^1.1.1",
     "@radix-ui/react-avatar": "^1.0.2",
     "@radix-ui/react-checkbox": "^1.0.3",
@@ -41,8 +41,9 @@
     "axios": "^1.3.6",
     "class-variance-authority": "^0.5.3",
     "clsx": "^1.2.1",
-    "cuid": "^3.0.0",
     "diff": "^5.1.0",
+    "dotenv": "^16.0.3",
+    "drizzle-orm": "^0.25.3",
     "eventsource-parser": "^1.0.0",
     "fast-deep-equal": "^3.1.3",
     "framer-motion": "^10.12.4",
@@ -53,6 +54,7 @@
     "lexorank": "^1.0.5",
     "lodash": "^4.17.21",
     "million": "^2.3.0",
+    "nanoid": "^4.0.2",
     "next": "^13.3.1",
     "next-remove-imports": "^1.0.11",
     "node-html-parser": "^6.1.5",
@@ -88,12 +90,12 @@
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "autoprefixer": "^10.4.14",
+    "drizzle-kit": "^0.17.6-76e73f3",
     "eslint": "^8.39.0",
     "eslint-config-next": "^13.3.1",
     "postcss": "^8.4.23",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.2.7",
-    "prisma": "^4.13.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.0.4",
     "webpack-bundle-analyzer": "^4.8.0"
