--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "next build",
+    "build": "CI='' next build",
     "dev": "next dev",
     "lint": "next lint",
     "start": "next start"
   },
   "dependencies": {
-    "@clerk/nextjs": "^4.16.4",
+    "@clerk/nextjs": "^4.13.0",
     "@dnd-kit/core": "^6.0.8",
     "@dnd-kit/sortable": "^7.0.2",
     "@dqbd/tiktoken": "^1.0.6",
@@ -55,7 +55,7 @@
     "lodash": "^4.17.21",
     "million": "^2.3.0",
     "nanoid": "^4.0.2",
-    "next": "^13.3.1",
+    "next": "^13.2.4",
     "next-remove-imports": "^1.0.11",
     "node-html-parser": "^6.1.5",
     "react": "18.2.0",
