Various UX adjustments * Add UI for key terms * Made the experience more opinionated * Added turbo mode (gpt-3.5-turbo)

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@radix-ui/react-portal": "^1.0.2",
     "@radix-ui/react-scroll-area": "^1.0.3",
     "@radix-ui/react-select": "^1.2.1",
+    "@radix-ui/react-switch": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.5",
     "@trpc/client": "^10.18.0",
     "@trpc/next": "^10.21.2",
