--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@radix-ui/react-context-menu": "^2.1.3",
     "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.4",
+    "@radix-ui/react-hover-card": "^1.0.5",
     "@radix-ui/react-popover": "^1.0.5",
     "@radix-ui/react-portal": "^1.0.2",
     "@radix-ui/react-scroll-area": "^1.0.3",
@@ -42,6 +43,7 @@
     "axios": "^1.3.6",
     "class-variance-authority": "^0.5.3",
     "clsx": "^1.2.1",
+    "cmdk": "^0.2.0",
     "diff": "^5.1.0",
     "dotenv": "^16.0.3",
     "drizzle-orm": "^0.25.3",
