--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.0",
     "react-markdown": "^8.0.7",
+    "react-player": "^2.12.0",
     "react-textarea-autosize": "^8.4.1",
     "remarkable": "^2.0.1",
     "superjson": "1.12.2",
