--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "fast-deep-equal": "^3.1.3",
     "framer-motion": "^10.12.4",
     "gitdiff-parser": "^0.3.1",
+    "is-mobile": "^4.0.0",
     "jotai": "^2.0.4",
     "js-yaml": "^4.1.0",
     "jsdom": "^21.1.1",
