--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "autoprefixer": "^10.4.14",
-    "drizzle-kit": "^0.17.6-76e73f3",
+    "drizzle-kit": "0.20.14",
     "eslint": "^8.39.0",
     "eslint-config-next": "^13.3.1",
     "postcss": "^8.4.23",
