--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mantine/hooks": "^6.0.9",
     "@mozilla/readability": "^0.4.4",
     "@nem035/gpt-3-encoder": "^1.1.7",
+    "@neondatabase/serverless": "^0.9.3",
     "@paralleldrive/cuid2": "^2.2.0",
     "@planetscale/database": "^1.7.0",
     "@radix-ui/react-accordion": "^1.1.1",
@@ -40,6 +41,7 @@
     "@trpc/react-query": "^10.18.0",
     "@trpc/server": "^10.18.0",
     "@uiw/react-md-editor": "^3.20.9",
+    "@vercel/postgres": "^0.8.0",
     "@xstate/react": "^3.2.2",
     "axios": "^1.3.6",
     "class-variance-authority": "^0.5.3",
@@ -48,7 +50,7 @@
     "compromise": "^14.9.0",
     "diff": "^5.1.0",
     "dotenv": "^16.0.3",
-    "drizzle-orm": "^0.29.3",
+    "drizzle-orm": "^0.29.5",
     "eventsource-parser": "^1.0.0",
     "fast-deep-equal": "^3.1.3",
     "framer-motion": "^10.12.4",
@@ -65,6 +67,7 @@
     "next-remove-imports": "^1.0.11",
     "node-html-parser": "^6.1.5",
     "pluralize": "^8.0.0",
+    "postgres": "3.3",
     "react": "18.2.0",
     "react-diff-view": "^3.0.3",
     "react-dom": "18.2.0",
@@ -77,6 +80,7 @@
     "tailwind-merge": "^1.12.0",
     "tailwindcss-animate": "^1.0.5",
     "turndown": "^7.1.2",
+    "ws": "^8.17.0",
     "xstate": "^4.37.2",
     "zod": "^3.21.4",
     "zustand": "^4.3.7"
